Select with conditions

--- a/accordion.html
+++ b/accordion.html
@@ -35,7 +35,8 @@
     $(document).ready(function() {
         // // jQuery FUNCTION.
         $("#accordion").accordion({
-            heightStyle: "content"
+            heightStyle: "content",
+            collapsible: true,
         });
         // $("#accordion div").hide();
         // $("#accordion h3").click(function() {
